// Vitest Snapshot v1

exports[`SelectInput > SelectInput autocompleteVue demo works fine 1`] = `
<div
  data-v-6de3cc0f=""
>
  <t-select-input
    allow-input=""
    clearable=""
    data-v-6de3cc0f=""
    placeholder="请输入任意关键词"
    style="width: 300px;"
    value=""
  />
</div>
`;

exports[`SelectInput > SelectInput autowidthMultipleVue demo works fine 1`] = `
<div
  class="tdesign-demo__select-input-borderless-multiple"
  style="width: 100%;"
>
  <t-select-input
    allow-input=""
    auto-width=""
    clearable=""
    min-collapsed-num="1"
    multiple=""
    placeholder="select frameworks"
    value="[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput autowidthVue demo works fine 1`] = `
<div
  data-v-d3026d40=""
>
  <t-select-input
    allow-input=""
    auto-width=""
    clearable=""
    data-v-d3026d40=""
    placeholder="Please Select"
    value="[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput borderlessMultipleVue demo works fine 1`] = `
<div
  class="tdesign-demo__select-input-borderless-multiple"
  style="width: 100%;"
>
  <t-select-input
    allow-input=""
    borderless=""
    clearable=""
    min-collapsed-num="1"
    multiple=""
    placeholder="select frameworks"
    style="width: 250px;"
    value="[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput borderlessVue demo works fine 1`] = `
<div
  data-v-5429dd2c=""
>
  <t-select-input
    borderless=""
    clearable=""
    data-v-5429dd2c=""
    placeholder="Please Select"
    style="width: 200px;"
    value="[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput collapsedItemsVue demo works fine 1`] = `
<div
  class="tdesign-demo__select-input-collapsed-items"
  style="width: 100%;"
>
  <br />
  <t-select-input
    allow-input=""
    clearable=""
    min-collapsed-num="1"
    multiple=""
    placeholder="请选择"
    value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
  <br />
  <br />
  <br />
  <t-select-input
    allow-input=""
    clearable=""
    collapsed-items="function () { [native code] }"
    min-collapsed-num="2"
    multiple=""
    placeholder="请选择"
    value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
  <br />
  <br />
  <br />
  <t-select-input
    allow-input=""
    clearable=""
    min-collapsed-num="3"
    multiple=""
    placeholder="请选择"
    value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput customTagVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-input-custom-tag"
  data-v-3251f825=""
>
  <t-select-input
    clearable=""
    data-v-3251f825=""
    placeholder="Please Select"
    value="[object Object]"
  />
  <br
    data-v-3251f825=""
  />
  <br
    data-v-3251f825=""
  />
  <t-select-input
    data-v-3251f825=""
    multiple=""
    placeholder="Please Select"
    value="tdesign-vue,tdesign-react"
  />
  <br
    data-v-3251f825=""
  />
  <br
    data-v-3251f825=""
  />
  <t-select-input
    data-v-3251f825=""
    multiple=""
    placeholder="Please Select"
    value="tdesign-vue,tdesign-react,tdesign-mobile-vue"
  />
</div>
`;

exports[`SelectInput > SelectInput excessTagsDisplayTypeVue demo works fine 1`] = `
<div
  class="tdesign-demo__select-input-excess-tags-display-type"
  style="width: 100%;"
>
  <p>
    第一种呈现方式：超出时滚动显示
  </p>
  <br />
  <t-select-input
    allow-input=""
    clearable=""
    multiple=""
    placeholder="请选择"
    tag-input-props="[object Object]"
    value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
  <br />
  <br />
  <br />
  <p>
    第二种呈现方式：超出时换行显示
  </p>
  <br />
  <t-select-input
    allow-input=""
    clearable=""
    multiple=""
    placeholder="请选择"
    tag-input-props="[object Object]"
    value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput labelSuffixVue demo works fine 1`] = `
<div
  data-v-1c8ac371=""
>
  <t-select-input
    clearable=""
    data-v-1c8ac371=""
    label="前置内容："
    placeholder="Please Select"
    style="width: 300px;"
    value="[object Object]"
  />
  <br
    data-v-1c8ac371=""
  />
  <br
    data-v-1c8ac371=""
  />
  <t-select-input
    clearable=""
    data-v-1c8ac371=""
    placeholder="Please Select"
    style="width: 300px;"
    suffix="单位：元"
    value="[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput multipleVue demo works fine 1`] = `
<div
  class="tdesign-demo__select-input-multiple"
  style="width: 100%;"
>
  <div>
    <t-checkbox>
      是否允许输入
    </t-checkbox>
    <t-checkbox>
      允许创建新选项（Enter 创建）
    </t-checkbox>
  </div>
  <br />
  <div>
    <t-radio-group
      options="[object Object],[object Object]"
    />
  </div>
  <br />
  <br />
  <t-select-input
    allow-input="true"
    clearable=""
    input-value=""
    multiple=""
    placeholder="请选择或输入"
    popup-props="[object Object]"
    tag-input-props="[object Object]"
    value="[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput singleVue demo works fine 1`] = `
<div
  data-v-992b70a2=""
>
  <t-select-input
    allow-input=""
    clearable=""
    data-v-992b70a2=""
    placeholder="Please Select"
    style="width: 300px;"
    value="[object Object]"
  />
</div>
`;

exports[`SelectInput > SelectInput statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-select-input-status"
>
  <div>
    <span>
      禁用状态：
    </span>
    <t-select-input
      disabled=""
      placeholder="Please Select"
      tips="这是禁用状态文本提示"
      value="TDesign"
    />
  </div>
  <br />
  <div>
    <span>
      只读状态：
    </span>
    <t-select-input
      placeholder="Please Select"
      readonly=""
      tips="这是普通状态的文本提示"
      value="TDesign"
    />
  </div>
  <br />
  <br />
  <div>
    <span>
      成功状态：
    </span>
    <t-select-input
      placeholder="Please Select"
      status="success"
      tips="校验通过文本提示"
      value="TDesign"
    />
  </div>
  <br />
  <div>
    <span>
      警告状态：
    </span>
    <t-select-input
      placeholder="Please Select"
      status="warning"
      tips="校验不通过文本提示"
      value="TDesign"
    />
  </div>
  <br />
  <div>
    <span>
      错误状态：
    </span>
    <t-select-input
      placeholder="Please Select"
      status="error"
      tips="校验存在严重问题文本提示"
      value="TDesign"
    />
  </div>
  <br />
</div>
`;

exports[`SelectInput > SelectInput widthVue demo works fine 1`] = `
<div
  class="tdesign-demo__select-input-width"
>
  <div>
    <span>
      下拉框默认宽度：
    </span>
    <t-select-input
      class="t-demo-normal"
      placeholder="Please Select"
      value="TDesign"
    />
  </div>
  <br />
  <div>
    <span>
      下拉框最大宽度：
    </span>
    <t-select-input
      class="t-demo-normal"
      placeholder="Please Select"
      value="TDesign"
    />
  </div>
  <br />
  <div>
    <span>
      与内容宽度一致：
    </span>
    <t-select-input
      class="t-demo-normal"
      placeholder="Please Select"
      popup-props="[object Object]"
      value="TDesign"
    />
  </div>
  <br />
  <div>
    <span>
      下拉框固定宽度：
    </span>
    <t-select-input
      class="t-demo-normal"
      placeholder="Please Select"
      popup-props="[object Object]"
      value="TDesign"
    />
  </div>
  <br />
</div>
`;
